# spalt

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  README.md  codecov.yml
.github/workflows/: ci.yml  coverage.yml
cmake/: spalt-config.cmake.in
examples/: 6I2Y_foretinib_simi.txt  Mol1.sdf  Mol2.sdf  Mol2_2d.sdf  README.md  foretinib.sdf  smiles.txt  surface.face  surface.vert  test.xyzr
ouput/: 6I2Y_foretinib_simi_smiles_1_aligned.sdf  6I2Y_foretinib_simi_smiles_2_aligned.sdf  reference_surface.ply
output/: reference_conformer.sdf
scripts/: extract.py
src/: cli.cpp  cli.h  conformer_generator.cpp  conformer_generator.h  conformer_params.h  fps.cpp  fps.h  main.cpp  molecule.cpp  molecule.h  surface.cpp  surface.h  surface_fibonacci.cpp  surface_fibonacci.h  utils.cpp  utils.h
src/props/: esp.cpp  esp.h  hbond.cpp  hbond.h  hydrophobicity.cpp  hydrophobicity.h  pharmacophore.cpp  pharmacophore.h  property_params.cpp  property_params.h  rdkit_base_features.h  rdkit_utils.cpp  rdkit_utils.h  surface_property.h
tests/: CMakeLists.txt  test_alignment.cpp  test_cli_integration.cpp  test_conformer_generation.cpp  test_esp.cpp  test_fibonacci_surface.cpp  test_hbond_features.cpp  test_hydrophobicity.cpp  test_molecule.cpp  test_normals_usage.cpp  test_pharmacophore.cpp  test_property_system.cpp  test_segfault_fixes.cpp  test_surface.cpp  test_tsv_parsing.cpp  test_utils.cpp  test_vertex_mapping.cpp
